--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -170,6 +170,9 @@ td{
 
       	
 	</ul>
+	<audio controls autoplay loop style="height: 15px; width: 56px; padding-top: 60px">
+		<source src="assets/resources/son/vivPri.mp3" type="audio/mpeg"/>
+	</audio>
 	<ul class="nav navbar-nav navbar-right">
 	<form class="navbar-form">
       <input class="form-control mr-sm-2" type="search" placeholder="Rechercher" aria-label="Search">
@@ -177,6 +180,7 @@ td{
     </form>
     </ul>
     </div>
+    
     <div style="float: right;"><i id="space"><img src="assets/resources/image/Elephant-Logo.png" style="max-height: 200px; max-width: 200px"></i></div>
 </nav>
 <br/>
@@ -188,8 +192,5 @@ td{
 	<div ng-view=""></div>
 </div>
 
-<audio controls autoplay loop>
-	<source src="assets/resources/son/vivPri.mp3" type="audio/mpeg"/>
-</audio>
 </body>
 </html>
