--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -178,6 +178,14 @@ background-size: cover;
 				</ul></li>		
 	</nav>
 	</center>
+	
+	<div class="container">
+	<div ng-view=""></div>
+	
+	
+	</div>
+	
+	
 
 </body>
 </html>
