thibault : commit coquilles vuePC

--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -27,6 +27,8 @@
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Domine" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Alice" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Baloo+Tammudu" rel="stylesheet">
+
 <!-- JS -->
 <script type="text/javascript" src="assets/resources/js/moment.min.js"></script>
 <script type="text/javascript" src="assets/resources/js/calendar.js"></script>
@@ -76,27 +78,27 @@ td{
 }
 @-webkit-keyframes example {
     0% {
-        left: -10px;
+        left: 0px;
         bottom: 25px;
         -moz-transform: rotate(0deg);
         transform: rotate(0deg);
     }
     17,5% {
-        left: -10px;
+        left: 0px;
         bottom: 25px;
         -moz-animation-timing-function: ease;
         -moz-transform: rotate(35deg);
         transform: rotate(35deg);
     }
     35% {
-        left: -10px;
+        left: 0px;
         bottom: 25px;
         -moz-animation-timing-function: ease;
         -moz-transform: rotate(-155deg);
         transform: rotate(-155deg);
     }
     50%{
-        left: -10px;
+        left: 0px;
         bottom: 25px;
         -moz-transform: rotate(45deg);
         transform: rotate(45deg);
@@ -109,13 +111,13 @@ td{
         transform: rotate(-55eg);
     }
     85% {
-        left: -10px;
+        left: 0px;
         bottom: 25px;
         -moz-transform: rotate(60deg);
         transform: rotate(60deg);
     }
     100% {
-        left: -10px;
+        left: 0px;
         bottom: 25px;
     }
 }
@@ -162,11 +164,11 @@ td{
       		</li>
       		<li><a href="#!mapPC">MAP</a></li>      	
 
-			<audio controls autoplay loop style="height: 10px; width: 56px; padding-top: 55px; opacity: 0">
+			<audio controls autoplay loop style="height: 10px; width: 56px; padding-top: 50px; opacity: 0;">
 				<source src="assets/resources/son/vivPri.mp3" type="audio/mpeg"/>
 			</audio>
     
-    		<div style="float: right;"><i id="space"><img src="assets/resources/image/Elephant-Logo.png" style="max-height: 200px; max-width: 200px"></i></div>
+    		<div style="margin-left: 1020px; position: absolute;"><i id="space"><img src="assets/resources/image/Elephant-Logo.png" style="max-height: 200px; max-width: 200px;  clip: ;"></i></div>
 			</div>
 			</ul>
 			</div>
