valentin commit ajouter client cote client

--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -49,6 +49,7 @@
 <script type="text/javascript" src="assets/js/client/controllers/cSPCController.js"></script>
 <script type="text/javascript" src="assets/js/client/controllers/visitePCController.js"></script>
 <script type="text/javascript" src="assets/js/client/controllers/mapController.js"></script>
+<script type="text/javascript" src="assets/js/client/controllers/clPCController.js"></script>
 
 <!-- Ajout des services -->
 <script type="text/javascript" src="assets/js/client/services/agencePCService.js"></script>
@@ -56,6 +57,7 @@
 <script type="text/javascript" src="assets/js/client/services/bienvendrePCService.js"></script>
 <script type="text/javascript" src="assets/js/client/services/cSPCService.js"></script>
 <script type="text/javascript" src="assets/js/client/services/mapService.js"></script>
+<script type="text/javascript" src="assets/js/client/services/clientPCService.js"></script>
 
 <style type="text/css">
 
@@ -154,6 +156,12 @@ td{
         		<ul class="dropdown-menu">
           			<li><a href="#!listeVendrePC">Liste</a></li>  
           			<li><a href="#!rechercheVendrePC">Recherche</a></li>        	
+        		</ul>
+      		</li>
+      		<li class="dropdown">
+        	<a class="dropdown-toggle" data-toggle="dropdown">Espace Client<span class="caret"></span></a>
+        		<ul class="dropdown-menu">
+          			<li><a href="#!ajoutClientPC">S'inscrire</a></li>            			       	
         		</ul>
       		</li>
       		<li class="dropdown">
