steven : commit demenagement du clendrier

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -51,6 +51,8 @@
 	src="assets/js/controllers/bienvendreController.js"></script>
 <script type="text/javascript"
 	src="assets/js/controllers/classeStandardController.js"></script>
+	
+<script type="text/javascript" src="assets/js/controllers/visitePCController.js"></script>
 
 
 <!-- Ajout des services -->
@@ -175,6 +177,7 @@ background-size: cover;
 					<li><a href="#!supprVisite">Suppression</a></li>
 					<li><a href="#!modifVisite">Modification</a></li>
 					<li><a href="#!rechercheVisite">Recherche</a></li>
+					<li><a href="#!calendrier">Calendrier</a></li>
 				</ul></li>		
 	</nav>
 	</center>
