thibault : commit index page accueil etc

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -189,6 +189,6 @@ background-size: cover;
 	</div>
 	
 	
-
+<div style="position: fixed; bottom: 0; right: 0;"><a href="http://localhost:8080/Projet_AppSystemeAgence/indexPC.html" style="font-size: 14px;">client</a></div>
 </body>
 </html>
