--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -187,6 +187,6 @@ td{
 <div class="container">
 	<div ng-view=""></div>
 </div>
-
+<div style="position: fixed; bottom: 0; right: 0;"><a href="http://localhost:8080/Projet_AppSystemeAgence/index.html" style="font-size: 14px;">admin</a></div>
 </body>
 </html>
