thibault : accueil client plus changement d eportail plus image

--- a/src/main/webapp/indexPC.html
+++ b/src/main/webapp/indexPC.html
@@ -138,6 +138,8 @@ td{
 			<div class="angle-2"></div>
 			<div class="menu-bg">
 				<ul id="menu" >
+				<li><a href="#!welcome">Accueil</a></li>
+				<li><a href="#!accueilPC">Nos biens</a></li>
 				<li class="dropdown">
         		<a class="dropdown-toggle" data-toggle="dropdown">Nos Agences<span class="caret"></span></a>
         		<ul class="dropdown-menu">
