steven commit calendar

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -25,6 +25,16 @@
 <script type="text/javascript"
 	src="assets/resources/js/angular-base64-upload.js"></script>
 
+	
+	<!--  libs du calendar -->
+	<!-- JS -->
+	
+<script type="text/javascript" src="assets/resources/js/moment.min.js"></script>
+<script type="text/javascript" src="assets/resources/js/calendar.js"></script>
+<script type="text/javascript" src="assets/resources/js/fullcalendar.js"></script>
+<script type="text/javascript" src="assets/resources/js/gcal.js"></script>
+<!--  CSS -->
+<link href="assets/resources/css/fullcalendar.css" rel="stylesheet" />
 
 <!-- Ajout du module principale -->
 <script type="text/javascript" src="assets/js/modules/monApp.js"></script>
